--- a/CLogic/CapaLogica.csproj
+++ b/CLogic/CapaLogica.csproj
@@ -44,5 +44,15 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CData\CapaDatos.csproj">
+      <Project>{ebf6b795-5259-4fe5-8e42-c5ea9f37b09b}</Project>
+      <Name>CapaDatos</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Entidades\Entidades.csproj">
+      <Project>{be0f0cae-1b40-46b5-87d7-b3e07a5603a8}</Project>
+      <Name>Entidades</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
