--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -126,6 +126,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmBuscarPaciente.resx">
+      <DependentUpon>FrmBuscarPaciente.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmIngresoDatosEmpleado.resx">
       <DependentUpon>FrmIngresoDatosEmpleado.cs</DependentUpon>
     </EmbeddedResource>
