--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -144,6 +144,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportMedicoTipo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportMedicoTipo.Designer.cs">
+      <DependentUpon>ReportMedicoTipo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ReportMedicoVacaciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportMedicoVacaciones.Designer.cs">
+      <DependentUpon>ReportMedicoVacaciones.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FrmBuscarConsulta.resx">
       <DependentUpon>FrmBuscarConsulta.cs</DependentUpon>
     </EmbeddedResource>
@@ -201,6 +213,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ReportMedicoTipo.resx">
+      <DependentUpon>ReportMedicoTipo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportMedicoVacaciones.resx">
+      <DependentUpon>ReportMedicoVacaciones.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
