--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -144,17 +144,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReportMedicoTipo.cs">
+    <Compile Include="Reportes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ReportMedicoTipo.Designer.cs">
-      <DependentUpon>ReportMedicoTipo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ReportMedicoVacaciones.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ReportMedicoVacaciones.Designer.cs">
-      <DependentUpon>ReportMedicoVacaciones.cs</DependentUpon>
+    <Compile Include="Reportes.Designer.cs">
+      <DependentUpon>Reportes.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="FrmBuscarConsulta.resx">
       <DependentUpon>FrmBuscarConsulta.cs</DependentUpon>
@@ -213,11 +207,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ReportMedicoTipo.resx">
-      <DependentUpon>ReportMedicoTipo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ReportMedicoVacaciones.resx">
-      <DependentUpon>ReportMedicoVacaciones.cs</DependentUpon>
+    <EmbeddedResource Include="Reportes.resx">
+      <DependentUpon>Reportes.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
