admin hecho hecho en lógica

--- a/CLogic/CapaLogica.csproj
+++ b/CLogic/CapaLogica.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClOperacionesAdmin.cs" />
     <Compile Include="ClOperacionesConsultas.cs" />
     <Compile Include="ClOperacionesEmpleado.cs" />
     <Compile Include="ClOperacionesEstadoVacacion.cs" />
